examples/test/testpolicy12237.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12237
  namespace: namespace247
spec:
  podSelector:
    matchLabels:
      key40: value1
      key25: value19
      key1: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value33
      podSelector:
        matchLabels:
          key31: value20
          key23: value24
          key20: value8
